# CodeDoctor

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  dummy.py  main.py  prompts.py  state.py  tools.py  utils.py
src/codedoctor/: broker.py  cli.py  config.py  state.py  utils.py
src/codedoctor/api/: main.py  schemas.py
src/codedoctor/api/routers/: context.py  doctor.py  engineer.py
src/codedoctor/doctor/: cli.py  main.py  prompts.py  tools.py
src/codedoctor/engineer/: cli.py  main.py  prompts.py  tools.py
src/tests/: test_divide.py
tests/: test_divide.py  test_src_codedoctor_cli.py  test_src_codedoctor_utils.py
ui/: package.json  pnpm-lock.yaml
ui/src/: App.tsx  types.tsx
ui/src/components/: Doctor.tsx  Engineer.tsx  Error.tsx  ErrorScreen.tsx  Executor.tsx  Header.tsx  Logs.tsx  Sidebar.tsx
