[project]
name = "codedoctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project.scripts]
doctor = "codedoctor.doctor.main:main"
engineer = "codedoctor.engineer.main:main"

